--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,8 @@
                 com.yoloo.android.backend.api.FollowEndpoint,
                 com.yoloo.android.backend.api.TokenEndpoint,
                 com.yoloo.android.backend.api.MediaEndpoint,
-                com.yoloo.android.backend.api.PostEndpoint
+                com.yoloo.android.backend.api.PostEndpoint,
+                com.yoloo.android.backend.api.VoteEndpoint
             </param-value>
         </init-param>
     </servlet>
