--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'org.mindrot:jbcrypt:0.3m'
     compile 'commons-fileupload:commons-fileupload:1.3.2'
     compile 'com.google.guava:guava:19.0'
+    compile 'com.google.code.gson:gson:2.7'
 
     testCompile 'junit:junit:4.12'
     testCompile "com.google.appengine:appengine-api-stubs:$APP_ENGINE_VERSION"
