--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion '24.0.1'
     defaultConfig {
         applicationId "com.yoloo.android"
-        minSdkVersion 23
+        minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -23,7 +23,7 @@ android {
         }
 
         buildTypes.each {
-            it.buildConfigField 'String', 'CLIENT_SERVER_ID', '"369106561777-8cqi3ujggnjc723tqgmrm7i1ip5v215q.apps.googleusercontent.com"'
+            it.buildConfigField 'String', 'CLIENT_SERVER_ID', '"156968448687-neijssaop32197nfeuvs52hlo4aqtas4.apps.googleusercontent.com"'
         }
     }
 
@@ -41,8 +41,6 @@ android {
     }
 }
 
-def DBFLOW_VERSION = "3.0.1"
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(path: ':backend', configuration: 'android-endpoints')
@@ -51,6 +49,7 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
+
     compile "com.google.android.gms:play-services-analytics:$PLAY_SERVICES_VERSION"
     compile "com.google.android.gms:play-services-gcm:$PLAY_SERVICES_VERSION"
     compile "com.google.android.gms:play-services-auth:$PLAY_SERVICES_VERSION"
@@ -58,17 +57,18 @@ dependencies {
     compile "com.jakewharton:butterknife:$BUTTERKNIFE_VERSION"
     apt "com.jakewharton:butterknife-compiler:$BUTTERKNIFE_VERSION"
 
-    apt "com.github.Raizlabs.DBFlow:dbflow-processor:$DBFLOW_VERSION"
-    compile "com.github.Raizlabs.DBFlow:dbflow-core:$DBFLOW_VERSION"
-    compile "com.github.Raizlabs.DBFlow:dbflow:$DBFLOW_VERSION"
+    provided 'com.google.auto.value:auto-value:1.3-rc2'
+    apt 'com.google.auto.value:auto-value:1.3-rc2'
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha6'
-    compile 'com.jakewharton.timber:timber:4.1.2'
+    compile 'com.google.code.gson:gson:2.7'
+
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
+    compile 'com.jakewharton.timber:timber:4.2.0'
     compile 'com.hannesdorfmann:adapterdelegates2:2.0.1'
     compile 'com.hannesdorfmann.mosby:mvp:2.0.1'
     compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.8'
-    compile 'com.birbit:android-priority-jobqueue:2.0.0-beta2'
+    compile 'io.reactivex:rxjava:1.1.9'
+    compile 'com.birbit:android-priority-jobqueue:2.0.0-beta3'
     compile 'com.yalantis:ucrop:2.1.2'
     compile 'pub.devrel:easypermissions:0.1.7'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
