--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,23 +49,20 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
+    compile "com.android.support:palette-v7:$SUPPORT_LIBRARY_VERSION"
 
     compile "com.google.android.gms:play-services-analytics:$PLAY_SERVICES_VERSION"
     compile "com.google.android.gms:play-services-gcm:$PLAY_SERVICES_VERSION"
     compile "com.google.android.gms:play-services-auth:$PLAY_SERVICES_VERSION"
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
+
     compile "com.jakewharton:butterknife:$BUTTERKNIFE_VERSION"
     apt "com.jakewharton:butterknife-compiler:$BUTTERKNIFE_VERSION"
 
-    provided 'com.google.auto.value:auto-value:1.3-rc2'
-    apt 'com.google.auto.value:auto-value:1.3-rc2'
-
     compile 'com.google.code.gson:gson:2.7'
-
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha7'
     compile 'com.jakewharton.timber:timber:4.2.0'
-    compile 'com.hannesdorfmann:adapterdelegates2:2.0.1'
-    compile 'com.hannesdorfmann.mosby:mvp:2.0.1'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.9'
     compile 'com.birbit:android-priority-jobqueue:2.0.0-beta3'
@@ -73,10 +70,16 @@ dependencies {
     compile 'pub.devrel:easypermissions:0.1.7'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
 
+    compile 'com.github.jd-alexander:LikeButton:0.2.0'
+
+    apt 'com.google.auto.value:auto-value:1.3-rc2'
+    provided 'com.google.auto.value:auto-value:1.3-rc2'
+
     testCompile 'junit:junit:4.12'
     androidTestCompile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
