--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'com.getkeepsafe.dexcount'
+apply from: '../config/quality/quality.gradle'
 
 ext.minimumSdkVersion = 16
 ext.versionMajor = 1
@@ -9,12 +10,12 @@ ext.versionPatch = 0
 ext.versionClassifier = "RELEASE"
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '24.0.3'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.backpackers.android"
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode generateVersionCode() // 140010203
         versionName generateVersionName() // 1.2.3-SNAPSHOT
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -94,8 +95,8 @@ dependencies {
     compile "com.jakewharton:butterknife:$BUTTERKNIFE_VERSION"
     apt "com.jakewharton:butterknife-compiler:$BUTTERKNIFE_VERSION"
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
-    compile 'com.github.hotchemi:permissionsdispatcher:2.1.3'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.2.0'
     apt 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
 
     compile 'io.reactivex:rxandroid:1.2.1'
@@ -109,7 +110,7 @@ dependencies {
     compile 'com.yalantis:ucrop:2.2.0-native'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.jakewharton.timber:timber:4.3.1'
-    compile 'com.github.armcha:AutoLinkTextView:0.1.1'
+    compile 'com.github.armcha:AutoLinkTextView:0.2.0'
 
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
